plugins {
    id 'org.springframework.boot' version '2.7.0'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.kdt'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

dependencies {
    //SPRING WEB
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //SPRING SECURITY
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //VALIDATION
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    //DB
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'mysql:mysql-connector-java'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    // LOMBOK
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //TEST
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'


    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'commons-io:commons-io:2.11.0'

    //JWT
    implementation 'com.auth0:java-jwt:3.18.1'

    //THYMELEAF
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    // WEBJARS - AXIOS
    implementation 'org.webjars.npm:axios:0.27.2'
}

tasks.named('test') {
    useJUnitPlatform()
}
